--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,12 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+
+# Team added .ignore rule
+Library/
+Artifacts/
+PackageCache/
+PackageManager/
+Logs/
+*.log
