[FEAT] 퍼즐 게임 : sight settings
[프로그래밍] 2D URP project setting#49
[프로그래밍] apply 2D Lightning, Point Light2D following Player#50


Signed-off-by: JuNijen <wjstldms0823@naver.com>

--- a/.gitignore
+++ b/.gitignore
@@ -75,7 +75,13 @@ crashlytics-build.properties
 # Team added .ignore rule
 Library/
 Artifacts/
+PresssTheCommand/Library/Artifacts/
 PackageCache/
 PackageManager/
+ScriptAssemblies/
+PresssTheCommand/Library/ScriptAssemblies/
+Temp/
 Logs/
 *.log
+*.dll
+*.pdb
