[FEAT] 퍼즐 게임 : sight settings
[EDIT] git ignore
[프로그래밍] 2D URP project setting #49
[프로그래밍] add object's physic collisions


Signed-off-by: JuNijen <wjstldms0823@naver.com>

--- a/.gitignore
+++ b/.gitignore
@@ -73,13 +73,8 @@ crashlytics-build.properties
 
 
 # Team added .ignore rule
-Library/
-Artifacts/
-PresssTheCommand/Library/Artifacts/
 PackageCache/
-PackageManager/
-ScriptAssemblies/
-PresssTheCommand/Library/ScriptAssemblies/
+ShaderCache/
 Temp/
 Logs/
 *.log
